compiler/libec: Upgraded Bison 2.0->2.4.2 to fix MkExpDummy() leak. Added destructors to type.y & expression.y Bootstrap updated.

--- a/compiler/libec/Makefile
+++ b/compiler/libec/Makefile
@@ -148,8 +148,7 @@ ECS := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecs)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w -I../bootstrap/include \
-	 -DYYTOKENTYPE
+CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w -I../bootstrap/include
 
 # BSL CFLAGS
 BSL_CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
