--- a/compiler/ecs/Makefile
+++ b/compiler/ecs/Makefile
@@ -45,6 +45,7 @@ export DYLD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
 ECP := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecp)
 ECC := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecc)
 ECS := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecs)
+EAR := $(call psep,../../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
