--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -128,7 +128,7 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 # FLAGS
 
 CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
-	 -DECERE_COM_MODULE -DBUILDING_ECERE_COM
+	 -DECERE_COM_MODULE -DBUILDING_ECERE_COM -DECERE_NOFILE
 
 CECFLAGS =
 
